Correção do codigo.
Cap1\Views\Instituicao\Delete

Feita alteração na linha 38, "<input type="hidden" aspfor="InstituicaoID" />" para "<input type="hidden" asp-for="InstituicaoID" />"
Inclusão de um traço (-) entre "asp" e "for" (asp-for).

--- a/Cap1/Views/Instituicao/Delete.cshtml
+++ b/Cap1/Views/Instituicao/Delete.cshtml
@@ -35,7 +35,7 @@
             </dd>
         </dl>
         <form asp-action="Delete">
-            <input type="hidden" aspfor="InstituicaoID" />
+            <input type="hidden" asp-for="InstituicaoID" />
             <div class="form-actions no-color">
                 <input type="submit" value="Delete" class="btn btn-default" /> |
                 <a asp-action="Index">Back to List</a>
